# Reconhecimento-e-Soma-de-Digitos-com-Vis-o-Computacional

./: .gitignore  README.md  app.py  classificador_timm.ipynb  classificar_imagens.ipynb  main.py  pyproject.toml  segmentacao_clipseg.ipynb  webcam_gestos.py  webcam_mediapipe.py
.agent/: rules.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
resultados_json/: cachorrofofo.json  conheca-as-racas-de-cachorros-mais-inteligentes-do-mundo_0.json
