[project]
name = "reconhecimento-e-soma-de-digitos-com-vis-o-computacional"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.67.0",
    "google-generativeai>=0.8.6",
    "ipykernel>=7.2.0",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.2",
]
