[project]
name = "reconhecimento-e-soma-de-digitos-com-vis-o-computacional"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.67.0",
    "google-generativeai>=0.8.6",
    "ipykernel>=7.2.0",
    "mediapipe>=0.10.33",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.2",
    "timm>=1.0.26",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.3.0",
]
